# Algo_project_s3

./: CMakeLists.txt  README.md  agenda.c  agenda.h  cellules.c  cellules.h  listes.c  listes.h  listes_bis.c  main.c
menus/: menu_one.c  menu_one.h  menu_three.c  menu_three.h  menu_two.c  menu_two.h
part_1/: cellules.c  cellules.h  listes.c  listes.h
part_2/: liste_2.c  liste_2.h  listes_2.c  listes_2.h  log.txt  timer.c  timer.h
part_3/: agenda.c  agenda.h
